# 3d-engine

./: CMakeLists.txt  README.md
include/spdlog/include/spdlog/: spdlog.h
src/engine/: entry.cpp  entry.h
src/engine/scene/object/: component.cpp  component.h  object.cpp  object.h
src/engine/scene/object/components/: transform_component.cpp  transform_component.h
src/engine/scene/world/: world.cpp  world.h
src/engine/ui/debug/: ui.cpp  ui.h
src/modules/core/: CMakeLists.txt  core.cpp  core.h
src/modules/input/: CMakeLists.txt  input.cpp  input.h
src/modules/input/utils/: keycodes.h
src/modules/logger/: CMakeLists.txt  logger.h
src/modules/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/modules/renderer/camera/: camera.h
src/modules/renderer/material/: material.h
src/modules/renderer/mesh/: mesh.h
src/modules/renderer/mesh/primitives/: primitives.h
src/modules/renderer/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/modules/renderer/utils/: shader.cpp  shader.h
src/modules/renderer/vulkan/: buffers.cpp  buffers.h  pipeline.cpp  pipeline.h  queuefamily.cpp  queuefamily.h  swapchain.cpp  swapchain.h  validation.cpp  validation.h
src/modules/renderer/window/: window.cpp  window.h
